# djangoReportTest

./: .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
common/: enums.py
djangoReportTest/: asgi.py  settings.py  urls.py  wsgi.py
report/: admin.py  models.py
report/api/: serializers.py  urls.py  views.py
report/migrations/: 0001_initial.py  0002_report_created_at.py
report/services/: analyze_file.py  generate_excel_file.py  process_request.py
tests/report/services/: dataframe_for_test.xlsx  test_analyze_file.py
